ggspectra 0.2.1
===============

Update User Guide (add examples of graphical comparison of multiple lists of
wavebands).

ggspectra 0.2.0
===============

Improve handling of annotations parameter in plot() methods.
Add functions ggcolorchart() and black_or_white().
Add statistics stat_wb_box() and stat_wb_column() with "rect" as default geom
and stat_wb_hbar() with "errorbarh" as default geom.
Change default geom from "rect" to "text" in all the summary stats for spectra.
Update stats with "text" as default geom to use an additional variable BW.color
computed by black_or_white() as default mapping for color.
As default geoms and color mapping have changed, this update can break existing
code. Changes to plot() methods are backwards compatible but default color of
some text labels is changed from "white" to "black" to improve readability,
and fewer peaks and valleys are highlighted by default. In addition more ticks
marks are used on the wavelength axis.
Fix minor bugs in handling of color mapping.
Update documentation.

ggspectra 0.1.12 (ver 0.1.11 was not submitted to CRAN)
================

Import ggplot2 in whole as only the most basic use of plot() methods would not
require user access to 'ggplot2'.
Add stat_label_peaks() and stat_label_valleys() which are designed to fully
take advantage of 'geom_text_repel()' and 'geom_label_repel()' as revised
in package 'ggrepel' (>= 0.6.3).
Change behaviour of plot() methods so that "illegal" values such as negative
spectral irradiances or transmittances are plotted by default.
Fix several minor bugs affecting plot() methods with certain non-default sets
of annotations.
Improve documentation and vignettes.

ggspectra 0.1.10
================

Add code to maintain same stacking order under ggplot2 1.1.0, 2.0.0, 2.1.0,
and 2.1.9000 in plot.object_spct().

ggspectra 0.1.9
===============

Add support for na.rm to all plot() methods setting default to TRUE, and avoid
triggering spurious warnings from internal code.