@@ -34,8 +34,14 @@ export(StatWbTotal)
 export(StatWlSummary)
 export(black_or_white)
 export(color_chart)
+export(exponent2prefix)
+export(exponent2prefix_name)
 export(geom_spct)
+export(has_SI_prefix)
 export(multiplot)
+export(nearest_SI_exponent)
+export(prefix2exponent)
+export(prefix_name2exponent)
 export(stat_color)
 export(stat_label_peaks)
 export(stat_label_valleys)
