@@ -3,6 +3,8 @@ ggspectra 0.2.1
 
 Update User Guide (add examples of graphical comparison of multiple lists of
 wavebands).
+Add utility functions for SI scale prefixes.
+Add utility functions for axis-labels.
 
 ggspectra 0.2.0
 ===============
